# PantryDriveUp

./: .gitattributes  COPYRIGHT  LICENSE  MANIFEST.in  README.md  setup.cfg
PantryDriveUp-Mac/: PantryDriveUp.command
src/PantryDriveUp/: __main__.py  server.py
src/PantryDriveUp/static/: DriveThruGroceryList.xlsx
src/PantryDriveUp/templates/: order_form.html  packing_list.html
src/PantryDriveUp_jmcininch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
