[metadata]
name = PantryDriveUp-jmcininch
version = 0.0.1
author = James McIninch
author_email = james.mcininch *at* gmail.com
description = Tool for PHP Pantry Drive-up Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JDMcIninch/PantryDriveUp
project_urls =
    Bug Tracker = https://github.com/JDMcIninch/PantryDriveUp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    drive-thru = PantryDriveUp:server